--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^10.0.5",
+    "@rematch/core": "^1.2.0",
     "axios": "^0.19.0",
     "expo": "^35.0.0",
     "expo-font": "^7.0.0",
