--- a/package.json
+++ b/package.json
@@ -8,48 +8,47 @@
     "eject": "expo eject",
     "flow": "flow"
   },
-  "jest": {
-    "preset": "jest-expo"
-  },
   "dependencies": {
-    "@expo/vector-icons": "^10.0.5",
-    "@rematch/core": "^1.2.0",
-    "axios": "^0.19.0",
-    "expo": "^35.0.0",
-    "expo-font": "^7.0.0",
+    "@expo/vector-icons": "^10.0.0",
+    "@react-native-community/masked-view": "^0.1.5",
+    "@rematch/core": "^1.3.0",
+    "axios": "^0.19.1",
+    "expo": "~36.0.0",
+    "expo-font": "~8.0.0",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
-    "react": "16.8.3",
-    "react-dom": "16.8.3",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
+    "react": "~16.9.0",
+    "react-dom": "~16.9.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-dimension": "^1.0.6",
-    "react-native-gesture-handler": "^1.3.0",
-    "react-native-reanimated": "^1.2.0",
-    "react-native-screens": "^1.0.0-alpha.23",
-    "react-native-web": "^0.11.7",
+    "react-native-gesture-handler": "~1.5.0",
+    "react-native-reanimated": "~1.4.0",
+    "react-native-screens": "2.0.0-alpha.12",
+    "react-native-web": "~0.11.7",
     "react-navigation": "^4.0.10",
-    "react-navigation-stack": "^1.9.0",
-    "react-redux": "^7.1.1",
-    "redux": "^4.0.4",
+    "react-navigation-stack": "^2.0.13",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "reselect": "^4.0.0"
+    "reselect": "^4.0.0",
+    "react-native-safe-area-context": "0.6.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.6.2",
-    "@babel/core": "^7.6.2",
-    "@babel/preset-flow": "^7.0.0",
+    "@babel/cli": "^7.7.7",
+    "@babel/core": "^7.7.7",
+    "@babel/preset-flow": "^7.7.4",
     "babel-eslint": "^10.0.3",
-    "babel-preset-expo": "^7.0.0",
-    "eslint": "^6.4.0",
+    "babel-preset-expo": "~8.0.0",
+    "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
-    "eslint-plugin-flowtype": "^4.3.0",
-    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-flowtype": "^4.5.3",
+    "eslint-plugin-import": "^2.19.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.14.3",
-    "eslint-plugin-react-native": "^3.7.0",
-    "flow-bin": "^0.108.0",
-    "jest-expo": "^35.0.0"
+    "eslint-plugin-react": "^7.17.0",
+    "eslint-plugin-react-hooks": "^1.7.0",
+    "eslint-plugin-react-native": "^3.8.1",
+    "flow-bin": "^0.115.0"
   },
   "private": true
 }
