--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^10.0.0",
-    "@react-native-community/masked-view": "^0.1.5",
+    "@react-native-community/masked-view": "0.1.5",
+    "@react-navigation/native": "^5.0.0-alpha.27",
+    "@react-navigation/stack": "next",
     "@rematch/core": "^1.3.0",
     "axios": "^0.19.1",
     "expo": "~36.0.0",
@@ -23,16 +25,14 @@
     "react-native-dimension": "^1.0.6",
     "react-native-gesture-handler": "~1.5.0",
     "react-native-reanimated": "~1.4.0",
+    "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-web": "~0.11.7",
-    "react-navigation": "^4.0.10",
-    "react-navigation-stack": "^2.0.13",
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "reselect": "^4.0.0",
-    "react-native-safe-area-context": "0.6.0"
+    "reselect": "^4.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.7.7",
