--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "dependencies": {
     "@expo/vector-icons": "^10.0.0",
     "@react-native-community/masked-view": "0.1.5",
-    "@react-navigation/native": "^5.0.0-alpha.27",
-    "@react-navigation/stack": "next",
+    "@react-navigation/native": "^5.0.9",
+    "@react-navigation/stack": "^5.1.1",
     "@rematch/core": "^1.3.0",
     "axios": "^0.19.1",
     "expo": "~36.0.0",
