Upgrade Expo SDK to v.39, add support for Reanimated v2.

--- a/app.json
+++ b/app.json
@@ -1,5 +1,8 @@
 {
   "expo": {
+    "experiments": {
+      "turboModules": true
+    },
     "name": "rn-skeleton",
     "slug": "rn-skeleton",
     "version": "1.0.0",
