--- a/package.json
+++ b/package.json
@@ -12,54 +12,70 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^10.0.0",
+    "@expo/vector-icons": "^12.0.0",
     "@react-native-community/async-storage": "~1.12.0",
+    "@react-native-community/hooks": "^2.6.0",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/bottom-tabs": "^5.6.1",
-    "@react-navigation/native": "^5.6.1",
-    "@react-navigation/stack": "^5.6.2",
-    "@rematch/core": "^1.4.0",
-    "axios": "^0.19.2",
-    "expo": "^39.0.0",
-    "expo-asset": "~8.2.0",
-    "expo-constants": "~9.2.0",
-    "expo-font": "~8.3.0",
-    "expo-linking": "^1.0.1",
-    "expo-localization": "~9.0.0",
-    "expo-splash-screen": "~0.6.1",
-    "expo-status-bar": "~1.0.2",
-    "expo-web-browser": "~8.5.0",
-    "lodash": "^4.17.15",
-    "moment": "^2.27.0",
+    "@react-navigation/bottom-tabs": "5.11.2",
+    "@react-navigation/native": "~5.8.10",
+    "@react-navigation/stack": "~5.12.8",
+    "@rematch/core": "^2.0.0",
+    "axios": "^0.21.1",
+    "expo": "~40.0.0",
+    "expo-asset": "~8.2.1",
+    "expo-blur": "~8.2.2",
+    "expo-constants": "~9.3.0",
+    "expo-font": "~8.4.0",
+    "expo-haptics": "~8.4.0",
+    "expo-linking": "~2.0.0",
+    "expo-splash-screen": "~0.8.0",
+    "expo-status-bar": "~1.0.3",
+    "expo-updates": "~0.4.1",
+    "expo-web-browser": "~8.6.0",
+    "lodash": "^4.17.20",
+    "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.0.tar.gz",
-    "react-native-gesture-handler": "~1.7.0",
-    "react-native-reanimated": "^2.0.0-alpha.6",
-    "react-native-safe-area-context": "3.1.4",
-    "react-native-screens": "~2.10.1",
-    "react-native-web": "~0.13.7",
-    "react-redux": "^7.2.0",
-    "redux": "^4.0.5"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-gesture-handler": "~1.8.0",
+    "react-native-reanimated": "^2.0.0-rc.0",
+    "react-native-redash": "^16.0.8",
+    "react-native-safe-area-context": "3.1.9",
+    "react-native-screens": "~2.15.0",
+    "react-native-web": "~0.13.12",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "use-debounce": "^5.2.0",
+    "expo-localization": "~9.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.6",
+    "@babel/core": "~7.9.0",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
-    "@types/react-redux": "^7.1.9",
-    "@typescript-eslint/eslint-plugin": "^3.4.0",
-    "@typescript-eslint/parser": "^3.4.0",
-    "babel-eslint": "^10.1.0",
-    "babel-preset-expo": "^8.3.0",
-    "eslint": "^7.3.1",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-plugin-import": "^2.21.2",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react": "^7.20.0",
-    "eslint-plugin-react-hooks": "^4.0.4",
-    "eslint-plugin-react-native": "^3.8.1",
-    "jest-expo": "^39.0.0",
-    "typescript": "~3.9.2"
+    "@types/react-redux": "^7.1.16",
+    "@typescript-eslint/eslint-plugin": "^4.15.1",
+    "@typescript-eslint/parser": "^4.15.1",
+    "eslint": "^7.20.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "husky": "^5.0.9",
+    "jest-expo": "~40.0.0",
+    "lint-staged": "^10.5.4",
+    "prettier": "^2.2.1",
+    "typescript": "~4.0.0"
   },
-  "private": true
+  "private": true,
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": "eslint"
+  }
 }
