--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo-font": "~8.4.0",
     "expo-haptics": "~8.4.0",
     "expo-linking": "~2.0.0",
+    "expo-localization": "~9.1.0",
     "expo-splash-screen": "~0.8.0",
     "expo-status-bar": "~1.0.3",
     "expo-updates": "~0.4.1",
@@ -45,8 +46,7 @@
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
-    "use-debounce": "^5.2.0",
-    "expo-localization": "~9.1.0"
+    "use-debounce": "^5.2.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
