--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^12.0.0",
-    "@react-native-community/async-storage": "~1.12.0",
+    "@react-native-async-storage/async-storage": "^1.13.0",
     "@react-native-community/hooks": "^2.6.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "5.11.2",
@@ -21,28 +21,28 @@
     "@react-navigation/stack": "~5.12.8",
     "@rematch/core": "^2.0.0",
     "axios": "^0.21.1",
-    "expo": "~40.0.0",
-    "expo-asset": "~8.2.1",
-    "expo-blur": "~8.2.2",
-    "expo-constants": "~9.3.0",
-    "expo-font": "~8.4.0",
-    "expo-haptics": "~8.4.0",
-    "expo-linking": "~2.0.0",
-    "expo-localization": "~9.1.0",
-    "expo-splash-screen": "~0.8.0",
-    "expo-status-bar": "~1.0.3",
-    "expo-updates": "~0.4.1",
-    "expo-web-browser": "~8.6.0",
+    "expo": "^41.0.0",
+    "expo-asset": "~8.3.1",
+    "expo-blur": "~9.0.3",
+    "expo-constants": "~10.1.3",
+    "expo-font": "~9.1.0",
+    "expo-haptics": "~10.0.0",
+    "expo-linking": "~2.2.3",
+    "expo-localization": "~10.1.0",
+    "expo-splash-screen": "~0.10.2",
+    "expo-status-bar": "~1.0.4",
+    "expo-updates": "~0.5.4",
+    "expo-web-browser": "~9.1.0",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-gesture-handler": "~1.8.0",
-    "react-native-reanimated": "^2.0.0-rc.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native-gesture-handler": "~1.10.2",
+    "react-native-reanimated": "~2.1.0",
     "react-native-redash": "^16.0.8",
-    "react-native-safe-area-context": "3.1.9",
-    "react-native-screens": "~2.15.0",
+    "react-native-safe-area-context": "3.2.0",
+    "react-native-screens": "~3.0.0",
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
@@ -64,7 +64,7 @@
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^5.0.9",
-    "jest-expo": "~40.0.0",
+    "jest-expo": "^41.0.0",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
     "typescript": "~4.0.0"
